MDL-73771 theme: Fix scrollbar position

--- a/theme/boost/scss/moodle/layout.scss
+++ b/theme/boost/scss/moodle/layout.scss
@@ -181,6 +181,9 @@
     #page.drawers .main-inner {
         margin-top: 1.5rem;
     }
+    #page.drawers .drawer-right-toggle {
+        margin-right: 0.7rem;
+    }
 }
 
 @include media-breakpoint-up(md) {
